# Sample

./: .gitignore  README.md  init  package-lock.json  package.json
RTNCalculator/: package.json
RTNCalculator/harmony/rtn_calculator/: oh-package.json5
RTNCalculator/harmony/rtn_calculator/src/main/: module.json5
RTNCalculator/harmony/rtn_calculator/src/main/cpp/: CMakeLists.txt  RTNCalculatorPackage.h
RTNCalculator/src/: NativeCalculator.ts
RTNCenteredText/: package.json  rtn-centered-text-0.0.1.tgz
RTNCenteredText/harmony/rtn_centered_text/: oh-package.json5
RTNCenteredText/harmony/rtn_centered_text/src/main/: module.json5
RTNCenteredText/harmony/rtn_centered_text/src/main/cpp/: CMakeLists.txt  RTNCenteredTextCAPIPackage.h  RTNCenteredTextComponentInstance.cpp  RTNCenteredTextComponentInstance.h  RTNCenteredTextPackage.h
RTNCenteredText/src/: RTNCenteredTextNativeComponent.ts
SampleApp/: build-profile.json5  oh-package.json5
SampleApp/entry/: oh-package-lock.json5  oh-package.json5
SampleApp/entry/src/main/: module.json5
SampleApp/entry/src/main/cpp/: CMakeLists.txt  PackageProvider.cpp  SampleTurboModulePackage.cpp  SampleTurboModulePackage.h
SampleApp/entry/src/main/cpp/Fabric/: MarqueeViewComponentDescriptor.h  MarqueeViewEventEmitRequestHandler.h  MarqueeViewEventEmitter.cpp  MarqueeViewEventEmitter.h  MarqueeViewJSIBinder.h  MarqueeViewNapiBinder.h  Props.cpp  Props.h
SampleApp/entry/src/main/cpp/TurboModules/: SampleTurboModule2Spec.cpp  SampleTurboModule2Spec.h
SampleApp/entry/src/main/ets/customView/: MarqueeView.ets
SampleProject/: README.md
SampleProject/MainProject/: basic.config.js  details.config.js  goods.config.js  homepage.config.js  index.js  metro.config.js  package.json  test.config.js
SampleProject/MainProject/src/bundles/Details/: DetailsMainPage.tsx  index.js
SampleProject/MainProject/src/bundles/Goods/: GoodsButton.tsx  GoodsMainPage.tsx  index.js
SampleProject/MainProject/src/bundles/HomePage/: CategoryButton.tsx  HomeListPage.tsx  HomePage.tsx  NavigationDemo.tsx  PdfDemo.tsx  ScreenDemo.tsx  index.js
SampleProject/MainProject/src/bundles/basic/: MarqueeView.tsx  SampleTurboModule.tsx  basic.js
SampleProject/MainProject/src/bundles/test/: index.js  testPage.tsx
SampleProject/MainProject/tests/: HMLog.ts  ScrollViewTest.tsx  index.tsx
SampleProject/react-native-harmony/: rnoh-react-native-harmony-0.72.13.tgz
SampleProject/react-native-harmony-cli/: rnoh-react-native-harmony-cli-0.0.17.tgz
exampleApp/: .gitignore  App.tsx  app.json  package.json
exampleApp/harmony/: .gitignore  build-profile.template.json5  oh-package.json5
exampleApp/harmony/AppScope/: app.json5
exampleApp/harmony/entry/: oh-package.json5
harmony/: permissions.har
scripts/: deploy.js  info.yaml  update-version.js
(+30 files in other folders)
